# vertex-velocity

./: .coverage  LICENSE  README.md  pyproject.toml  tilemap.json
.github/workflows/: lint.yaml  pylintrc
maps/: short.json  tilemap.json
scripts/: winner.json
src/: entities.py  game.py  levelEditor.py  particles.py  scriptedGame.py  tilemap.py  utils.py
src/assets/images/: player.xcf
test/: test_entities.py
tests/: test_entities.py  test_tilemap.py
vertex_velocity/: RLGame.py  entities.py  game.py  levelEditor.py  neuralNetwork.py  particles.py  scriptedGame.py  tilemap.py  utils.py
