[tool.poetry]
name = "vertex-velocity"
version = "0.1.0"
description = ""
authors = ["Maxime Puys <drakes00@gmail.com>"]
readme = "README.md"
packages = [{include = "vertex_velocity"}]

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ward = "^0.68.0b0"
ward-coverage = "^0.3.1"
vulture = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
