[tool.poetry]
name = "vertex-velocity"
version = "0.1.0"
description = ""
authors = ["Maxime Puys <drakes00@gmail.com>"]
readme = "README.md"
packages = [{include = "vertex_velocity"}]

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ward = "^0.68.0b0"
ward-coverage = "^0.3.1"
vulture = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ward]
hook_module = ["ward_coverage"]

# You can also configure ward-coverage further, for example:
[tool.ward.plugins.coverage]
report_type = ["term"] # Generate a terminal report
source = ["vertex_velocity"] # Specify which directories to include in coverage
omit = ["*test*", "**/__init__.py", "vertex_velocity/levelEditor.py", "vertex_velocity/*game.py", "vertex_velocity/*Game.py"] # Exclude test files and __init__.py
